# Gafro-Meeting-Summarizer-V1

./: README.md  config.yaml  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
data/: sample_transcript.json
knowledge/: user_preference.txt
src/: agent.py  agents.yaml  crew.py  diarize.py  export.py  main.py  summarize.py  transcribe.py
tests/: test_pipeline.py
